[package]
name = "solmate"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "local-time"] }
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.4"
once_cell = "1.19.0"

# Add this for cleaner test assertions
[dev-dependencies]
assert_matches = "1.5.0"